changes to the cloze test

--- a/web_app/views/layout.jade
+++ b/web_app/views/layout.jade
@@ -2,11 +2,12 @@ doctype html
 html
   head
     link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css", integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi", crossorigin="anonymous")
+    link(rel="stylesheet", href="/styles/main.css")
 
   body
     div(class="container")
-      nav(class="navbar navbar-light bg-faded mb-2")
-        a(class="navbar-brand", href="#") Navbar
+      nav(class="navbar navbar-full navbar-light bg-faded mb-2")
+        a(class="navbar-brand", href="/") Navbar
 
       div(class="container")
         div(class="row")
