--- a/web_app/views/layout.jade
+++ b/web_app/views/layout.jade
@@ -7,7 +7,7 @@ html
   body
     div(class="container")
       nav(class="navbar navbar-full navbar-light bg-faded mb-2")
-        a(class="navbar-brand", href="/") Navbar
+        a(class="navbar-brand", href="/") Maple Cloze Test
 
       div(class="container")
         div(class="row")
