--- a/web_app/views/test.jade
+++ b/web_app/views/test.jade
@@ -1,10 +1,10 @@
 extends ./layout.jade
 
 block content
-  //- div(class="col-sm-4 mb-2")
-  //-   div(class="input-group")
-  //-     span(class="input-group-addon", id="passkey}") Passkey
-  //-     input(type="text", class="form-control", aria-describedby="passkey", value="#{passkey}")
+  div(class="col-sm-4 offset-sm-8 mb-2")
+    div(class="input-group")
+      span(class="input-group-addon", id="passkey}") Passkey
+      input(type="text", class="form-control", aria-describedby="passkey", value="#{passkey}")
   div(class="col-sm-12 mb-2")
     div(class="row")
       div(class="col-sm-6 offset-sm-3")
