--- a/web_app/views/layout.jade
+++ b/web_app/views/layout.jade
@@ -8,6 +8,7 @@ html
     div(class="container")
       nav(class="navbar navbar-full navbar-light bg-faded mb-2")
         a(class="navbar-brand", href="/") Maple Cloze Test
+        block navbar-content
 
       div(class="container")
         div(class="row")
