Updated web app

--- a/web_app/views/index.jade
+++ b/web_app/views/index.jade
@@ -6,7 +6,10 @@ block content
       div(class="col-sm-8 mb-1")
         h5 Instructions
         ul
-          li This test has 100 questions.  Each question consists of a block of text with five arbitrary words removed.  These are called <strong>cloze words</strong>.  To the best of your ability, try to guess what words were removed.
+          li This test has 14 questions:
+            ul
+              li <em>7 cloze questions</em>: Each question consists of a block of text with five arbitrary words removed.  These are called <strong>cloze words</strong>.  To the best of your ability, try to guess what words were removed.
+              li <em>7 readability questions</em>: Each question asks you to rate the readability of a block of text.
           li When you start a test, you will be given a <strong>passkey</strong>.  It is important to save this passkey so that you can continue where you left off if you are interrupted.
     div(class="row")
       div(class="col-sm-4")
