--- a/web_app/views/layout.jade
+++ b/web_app/views/layout.jade
@@ -14,6 +14,7 @@ html
         div(class="row")
           block content
   script(src="http://code.jquery.com/jquery-3.1.1.min.js", integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=", crossorigin="anonymous")
+  script(type="text/javascript", src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js")
   script(type="text/javascript", src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js", integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK", crossorigin="anonymous")
 
   block scripts
